--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="ground.js"></script>
 <script src="pig.js"></script>
 <script src="log.js"></script>
-<script src="Bird.js"></script>
+<script src="bird.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
